RESOLVED FIXED224583
Fix WK_EXPORT macro for declspec compilers
https://bugs.webkit.org/show_bug.cgi?id=224583
Summary Fix WK_EXPORT macro for declspec compilers
Basuke Suzuki
Reported 2021-04-14 16:19:38 PDT
There're lots of warnings while building WebKit on those which uses declspec. > WebKit/Headers\WebKit/WKDeclarationSpecifiers.h:38:5: warning: 'BUILDING_WebKit' is not defined, evaluates to 0 [-Wundef] > #if BUILDING_WebKit > ^ > 1 warning generated.
Attachments
PATCH (1.53 KB, patch)
2021-04-14 17:43 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2021-04-14 17:43:21 PDT
EWS
Comment 2 2021-04-14 19:42:17 PDT
Committed r275992 (236544@main): <https://commits.webkit.org/236544@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426064 [details].
Radar WebKit Bug Importer
Comment 3 2021-04-14 19:43:20 PDT
Note You need to log in before you can comment on or make changes to this bug.