Fix WK_EXPORT macro for declspec compilers https://bugs.webkit.org/show_bug.cgi?id=224583

Reviewed by Don Olmstead.

It displays warnings when macro is not defined. Actually it is defined only when
it builds WebKit. It should be defined(BUILDING_WebKit).

* Shared/API/c/WKDeclarationSpecifiers.h:


Canonical link: https://commits.webkit.org/236544@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275992 268f45cc-cd09-0410-ab3c-d52691b4dbfc